--- a/src/Composer/Grapher/res/index.html
+++ b/src/Composer/Grapher/res/index.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
+<!-- 
+
+/*
+ * This file is part of Composer.
+ *
+ * (c) Nils Adermann <naderman@naderman.de>
+ *     Jordi Boggiano <j.boggiano@seld.be>
+ *
+ * For the full copyright and license information, please view the LICENSE
+ * file that was distributed with this source code.
+ */
+
+-->
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
